--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1079</width>
-    <height>465</height>
+    <height>602</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
       <x>0</x>
       <y>0</y>
       <width>1081</width>
-      <height>531</height>
+      <height>621</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -491,6 +491,32 @@
        </item>
       </layout>
      </widget>
+     <widget class="QPushButton" name="pushButton_5">
+      <property name="geometry">
+       <rect>
+        <x>860</x>
+        <y>40</y>
+        <width>111</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Read from File</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_6">
+      <property name="geometry">
+       <rect>
+        <x>740</x>
+        <y>40</y>
+        <width>111</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Read from Input</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
      <attribute name="title">
@@ -590,7 +616,7 @@
         <x>450</x>
         <y>40</y>
         <width>608</width>
-        <height>101</height>
+        <height>152</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_9">
@@ -663,9 +689,12 @@
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
+           <property name="sizeType">
+            <enum>QSizePolicy::Fixed</enum>
+           </property>
            <property name="sizeHint" stdset="0">
             <size>
-             <width>40</width>
+             <width>24</width>
              <height>20</height>
             </size>
            </property>
@@ -713,7 +742,7 @@
         <x>160</x>
         <y>40</y>
         <width>276</width>
-        <height>111</height>
+        <height>230</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_10">
@@ -890,7 +919,7 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>230</y>
+        <y>390</y>
         <width>921</width>
         <height>89</height>
        </rect>
@@ -956,7 +985,7 @@
             </font>
            </property>
            <property name="text">
-            <string>x0:</string>
+            <string>x1:</string>
            </property>
           </widget>
          </item>
@@ -1005,7 +1034,7 @@
             </font>
            </property>
            <property name="text">
-            <string>x0:</string>
+            <string>x2:</string>
            </property>
           </widget>
          </item>
@@ -1049,7 +1078,7 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>330</y>
+        <y>490</y>
         <width>221</width>
         <height>56</height>
        </rect>
@@ -1101,7 +1130,7 @@
       <property name="geometry">
        <rect>
         <x>350</x>
-        <y>190</y>
+        <y>340</y>
         <width>111</width>
         <height>21</height>
        </rect>
@@ -1120,8 +1149,8 @@
      <widget class="QPushButton" name="pushButton_3">
       <property name="geometry">
        <rect>
-        <x>320</x>
-        <y>330</y>
+        <x>310</x>
+        <y>490</y>
         <width>80</width>
         <height>23</height>
        </rect>
@@ -1133,14 +1162,40 @@
      <widget class="QPushButton" name="pushButton_4">
       <property name="geometry">
        <rect>
-        <x>320</x>
-        <y>360</y>
+        <x>310</x>
+        <y>520</y>
         <width>80</width>
         <height>23</height>
        </rect>
       </property>
       <property name="text">
        <string>Reset</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_7">
+      <property name="geometry">
+       <rect>
+        <x>450</x>
+        <y>210</y>
+        <width>121</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Read from Input</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_8">
+      <property name="geometry">
+       <rect>
+        <x>590</x>
+        <y>210</y>
+        <width>121</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Read from File</string>
       </property>
      </widget>
      <zorder>layoutWidget</zorder>
@@ -1152,6 +1207,8 @@
      <zorder>label_36</zorder>
      <zorder>pushButton_3</zorder>
      <zorder>pushButton_4</zorder>
+     <zorder>pushButton_7</zorder>
+     <zorder>pushButton_8</zorder>
     </widget>
    </widget>
   </widget>
